--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name=viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet" href="style.css">
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Sign in & Sign up Form</title>
   </head>
   <body>
@@ -78,9 +78,9 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            <h3>VABRANT RAJASTHAN</h3>
+            <h3>PUNE</h3>
             <p>
-              Welcome to Vabrant Rajasthan website page.. Complete your Sign Up to website access 
+              Welcome to Pune website page.. Complete your Sign Up to website access 
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -90,9 +90,9 @@
         </div>
         <div class="panel right-panel">
           <div class="content">
-            <h3>VABRANT RAJASTHAN</h3>
+            <h3>PUNE</h3>
             <p>
-              Welcome to Vabrant Rajasthan website page.. Complete your Sign In to website access 
+              Welcome to Pune website page.. Complete your Sign In to website access 
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
